--- a/static/css/style_select.css
+++ b/static/css/style_select.css
@@ -1,8 +1,8 @@
 form.login_form {
     margin-left: auto;
     margin-right: auto;
-    max-width: 450px;
-    background-color: #d9b59e;
+    max-width: 600px;
+    background-color: #ffffff;
     border: 1px solid gray;
     border-radius: 5px;
     padding: 10px;
