--- a/templates/color.html
+++ b/templates/color.html
@@ -1,7 +1,7 @@
 {% extends "pattern.html" %}
 
 {% block link %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/color.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/btn.css') }}">
 <style>
   body {
     background-color: {{ color }};
