--- a/templates/greeting.html
+++ b/templates/greeting.html
@@ -12,4 +12,18 @@
             <a href="http://127.0.0.1:8080/random/color" class="btn btn-primary">Перейти к рандомайзеру цвета</a>
         </form>
     </div>
+    <div>
+        <form class="login_form">
+            <h1>Рандомайзер паролей</h1>
+            <h2>Создаёт случайный пароль</h2>
+            <a href="http://127.0.0.1:8080/random/password" class="btn btn-primary">Перейти к рандомайзеру паролей</a>
+        </form>
+    </div>
+    <div>
+        <form class="login_form">
+            <h1>Рандомайзер числа</h1>
+            <h2>Создаёт случайное число</h2>
+            <a href="http://127.0.0.1:8080/random/number" class="btn btn-primary">Перейти к рандомайзеру числа</a>
+        </form>
+    </div>
 {% endblock %}
